--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "canvas-confetti": "^1.9.3",
+    "localforage": "^1.10.0",
+    "prettier": "^3.4.2",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
