--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@mui/material": "^6.3.1",
     "canvas-confetti": "^1.9.3",
     "localforage": "^1.10.0",
-    "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/parser": "^7.26.5",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.17.0",
+    "@types/prettier": "^2.7.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -30,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
