--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,8 +17,10 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowUnusedLabels": true,
+    "allowUnreachableCode": true,
     "noFallthroughCasesInSwitch": true,
     "incremental": true
   },
